[package]
name = "chronver"
version = "0.2.1"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
description = "Chronologic version parsing."
homepage = "https://github.com/dnaka91/chronver"
repository = "https://github.com/dnaka91/chronver"
keywords = ["version", "chronologic"]
categories = ["development-tools", "parsing"]
exclude = [".github", ".gitignore", "deny.toml", "release.toml"]

[badges.maintenance]
status = "deprecated"

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1.0.219", optional = true, features = ["derive"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }

[dev-dependencies]
divan = "0.1.21"
semver = "1.0.26"
serde_json = "1.0.142"
version-sync = "0.9.5"

[[bench]]
name = "parse"
harness = false
