[package]
name = "chronver"
version = "0.2.1"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "Chronologic version parsing."
homepage = "https://forge.dnaka91.rocks/dnaka91/chronver"
repository = "https://forge.dnaka91.rocks/dnaka91/chronver"
license = "MIT"
keywords = ["version", "chronologic"]
categories = ["development-tools", "parsing"]
include = ["src/**/*.rs", "LICENSE.md", "README.md"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1.0.219", optional = true, features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.41"

[dev-dependencies]
divan = "0.1.21"
proptest = "1.7.0"
semver = "1.0.26"
serde_json = "1.0.142"
time = { version = "0.3.41", features = ["macros"] }
version-sync = "0.9.5"

[[bench]]
name = "parse"
harness = false
